Move partial sorted array code to separate file